worked on plan for nav bar on mobile, fixed banner on mobile

--- a/src/components/component.css
+++ b/src/components/component.css
@@ -1,14 +1,1 @@
-.bannerphoto {
-	/* background-image: url("../assets/pictures/WoWScrnShot_051522_210632.jpg"); */
-	/* background-position: center;
-	object-fit: cover; */
-	object-position: 10% 100%;
-	/* height: 40vh; */
-	display: flex;
-	align-items: flex-end;
-	justify-content: center;
-}
-.bannerphoto h1 {
-	font-size: 4em;
-	color: yellow;
-}
+
